# partition-assignment

./: Cargo.toml  README.md  test.sh
src/: main.rs
