[package]
name = "assignment"
version = "0.1.0"
edition = "2021"
description = "An assignment tool for partitioning and replicating data across nodes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive", "env"] }
clap-stdin = "0.4.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_with = "3.7.0"
